--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -133,3 +133,56 @@
   height: 100%;
   object-fit: cover;
 }
+
+td {
+  height: 5rem;
+  font-size: 1.4rem;
+  padding: 1rem 2rem;
+  position: relative;
+}
+
+.numberOne {
+  width: 1rem;
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: left;
+}
+
+.number {
+    width: 1rem;
+    font-size: 1.5rem;
+    text-align: left;
+  }
+
+.nameOne{
+  text-align: left;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.name {
+    text-align: left;
+    font-size: 1.2rem;
+  }
+
+.donations {
+  font-weight: bold;
+  font-size: 1.3rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+#boxBuku {
+  height: 5.5rem;
+  background-color: #1EA7D1;
+  position: absolute;
+  box-shadow: 0px 10px 8px -6px #78898d;
+}
+
+#boxVideo {
+    height: 5.5rem;
+    background-color: #1EA7D1;
+    position: absolute;
+    box-shadow: 0px 10px 8px -6px #78898d;
+  }
