--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -142,15 +142,15 @@ td {
 }
 
 .numberOne {
-  width: 1rem;
-  font-size: 2rem;
+  width: 10px;
+  font-size: 1rem;
   font-weight: bold;
   text-align: left;
 }
 
 .number {
     width: 1rem;
-    font-size: 1.5rem;
+    font-size: 1rem;
     text-align: left;
   }
 
@@ -163,6 +163,7 @@ td {
 .name {
     text-align: left;
     font-size: 1.2rem;
+    font-weight: 500;
   }
 
 .donations {
